Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@
     user-select: none;
   }
 
+  main {
+    overflow: hidden;
+  }
+
   canvas {
     touch-action: none;
   }
